--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.20.3",
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
+    "crypto-js": "^4.2.0",
     "react": "^16.8.5",
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.9.0",
